--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,13 @@
 
 .sidebar {
   flex: 1;
-  text-align: center
+  text-align: center;
+  list-style-type: none;
+}
+
+.sidebar li{
+  margin-top: 20px;
+  list-style-type: none;
 }
 
 .notelist, .notepage, .note {
@@ -29,6 +35,7 @@
   border-style: double;
   padding: 20px;
   margin: 20px;
+  list-style-type: none;
 }
 
 .deleteButton {
